--- a/index.html
+++ b/index.html
@@ -393,17 +393,19 @@
         </div>
       </div>
     </section>
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem cum
-            assumenda quam perferendis dolore itaque ullam ea distinctio unde
-            asperiores.
-          </p>
+    <div class="container">
+      <div class="callout callout--primary callout-signup">
+        <div class="grid grid--1x2">
+          <div class="callout__content">
+            <h2 class="callout__heading">Ready to Get Started?</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem cum
+              assumenda quam perferendis dolore itaque ullam ea distinctio unde
+              asperiores.
+            </p>
+          </div>
+          <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
         </div>
-        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
       </div>
     </div>
 
